# MAICEN2511

./: .gitignore  README.md  main.py  pyproject.toml
M2U1/: README.md  app.js  index.html  styles.css
M2U1/docs/: PRD_ FIDIC Notice Generator.md
M2U2/: README.md  main.py  summary_report.txt
M2U2/docs/: M2U2-Individual-Assignment.md
M2U3/: RAG_Project_Workflow.json  README.md  csv_to_json.py  project_data.csv  project_data.json  project_data_r0.json
M2U3/llm_operation/: input.json  output.json
M4U1/: Analyst Report.md  M4U1_Predictive_Engine.html  M4U1_Predictive_Engine.ipynb  README.md  datasets.md  m.md  prompts.md
M4U2/: M4_U2_Assignment_Report.md  M4_U2_Assignment_Task.md  README.md  m4_u2_nlp_assignment_01.py  m4_u2_nlp_assignment_02.py  structured_extraction.json
